infrastructure/platform/headlamp/ingressroute-kube-system-headlamp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/instance: headlamp
    app.kubernetes.io/name: headlamp
  name: headlamp
  namespace: kube-system
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`headlamp.brmartin.co.uk`)
    services:
    - name: headlamp
      port: http
  tls:
    secretName: wildcard-brmartin-tls
